# PatternLanguage

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cli/: CMakeLists.txt
cli/include/cli/helpers/: utils.hpp
cli/include/pl/cli/: cli.hpp
cli/include/pl/cli/helpers/: info_utils.hpp
cli/source/: main.cpp
cli/source/helpers/: info_utils.cpp  utils.cpp
cli/source/subcommands/: codegen.cpp  docs.cpp  format.cpp  info.cpp  lint.cpp  massinfo.cpp  run.cpp
generators/: CMakeLists.txt
generators/include/pl/: codegens.hpp  formatters.hpp
generators/include/pl/codegens/: codegen.hpp  codegen_kaitai.hpp
generators/include/pl/formatters/: formatter.hpp  formatter_html.hpp  formatter_json.hpp  formatter_yaml.hpp
lib/: CMakeLists.txt
lib/include/: pl.hpp
lib/include/helpers/: concepts.hpp  file.hpp  fs.hpp  guards.hpp  types.hpp  utils.hpp
lib/include/pl/: api.hpp  builtin_function.hpp  error.hpp  evaluator.hpp  lexer.hpp  libstd.hpp  log_console.hpp  parser.hpp  pattern_language.hpp  pattern_visitor.hpp  preprocessor.hpp  token.hpp  validator.hpp
lib/include/pl/ast/: ast_node.hpp  ast_node_array_variable_decl.hpp  ast_node_assignment.hpp  ast_node_attribute.hpp  ast_node_bitfield.hpp  ast_node_bitfield_field.hpp  ast_node_builtin_type.hpp  ast_node_cast.hpp  ast_node_compound_statement.hpp  ast_node_conditional_statement.hpp  ast_node_control_flow_statement.hpp  ast_node_enum.hpp  ast_node_function_call.hpp  ast_node_function_definition.hpp  ast_node_literal.hpp  ast_node_lvalue_assignment.hpp  ast_node_mathematical_expression.hpp  ast_node_multi_variable_decl.hpp  ast_node_parameter_pack.hpp  ast_node_pointer_variable_decl.hpp  ast_node_rvalue.hpp  ast_node_rvalue_assignment.hpp  ast_node_scope_resolution.hpp  ast_node_struct.hpp  ast_node_ternary_expression.hpp  ast_node_type_decl.hpp  ast_node_type_operator.hpp  ast_node_union.hpp  ast_node_variable_decl.hpp  ast_node_while_statement.hpp
lib/include/pl/core/: .gitignore  evaluator.hpp  lexer.hpp  lexer_sm.hpp  location.hpp  log_console.hpp  new_lexer.hpp  new_lexer_sm.hpp  parser.hpp  parser_manager.hpp  preprocessor.hpp  resolver.hpp  resolvers.hpp  sections.hpp  token.hpp  tokens.hpp  validator.hpp
lib/include/pl/core/ast/: ast_node.hpp  ast_node_array_variable_decl.hpp  ast_node_attribute.hpp  ast_node_bitfield.hpp  ast_node_bitfield_array_variable_decl.hpp  ast_node_bitfield_field.hpp  ast_node_builtin_type.hpp  ast_node_cast.hpp  ast_node_compound_statement.hpp  ast_node_conditional_statement.hpp  ast_node_control_flow_statement.hpp  ast_node_enum.hpp  ast_node_function_call.hpp  ast_node_function_definition.hpp  ast_node_import_statement.hpp  ast_node_imported_type.hpp  ast_node_literal.hpp  ast_node_lvalue_assignment.hpp  ast_node_match_statement.hpp  ast_node_mathematical_expression.hpp  ast_node_multi_variable_decl.hpp  ast_node_parameter_pack.hpp  ast_node_pointer_variable_decl.hpp  ast_node_rvalue.hpp  ast_node_rvalue_assignment.hpp  ast_node_scope_resolution.hpp  ast_node_struct.hpp  ast_node_template_parameter.hpp  ast_node_ternary_expression.hpp  ast_node_try_catch_statement.hpp  ast_node_type_appilication.hpp  ast_node_type_decl.hpp  ast_node_type_operator.hpp  ast_node_union.hpp  ast_node_variable_decl.hpp  ast_node_while_statement.hpp
lib/include/pl/core/errors/: error.hpp  evaluator_errors.hpp  lexer_errors.hpp  parser_errors.hpp  preprocessor_errors.hpp  result.hpp  runtime_errors.hpp  validator_errors.hpp
lib/include/pl/errors/: error.hpp  evaluator_errors.hpp  lexer_errors.hpp  parser_errors.hpp  preprocessor_errors.hpp  validator_errors.hpp
lib/include/pl/helpers/: buffer.hpp  buffered_reader.hpp  concepts.hpp  construct_shared_object.hpp  create_shared_object.hpp  file.hpp  fs.hpp  guards.hpp  result.hpp  safe_iterator.hpp  safe_pointer.hpp  sort_checks.hpp  types.hpp  uintwide_t.h  utils.hpp  variant_type_index.hpp
lib/include/pl/lib/std/: libstd.hpp  types.hpp
lib/include/pl/patterns/: pattern.hpp  pattern_array_dynamic.hpp  pattern_array_static.hpp  pattern_bitfield.hpp  pattern_boolean.hpp  pattern_character.hpp  pattern_enum.hpp  pattern_error.hpp  pattern_float.hpp  pattern_padding.hpp  pattern_pointer.hpp  pattern_signed.hpp  pattern_string.hpp  pattern_struct.hpp  pattern_union.hpp  pattern_unsigned.hpp  pattern_wide_character.hpp  pattern_wide_string.hpp
lib/lexer_gen/: CMakeLists.txt  main.cpp
lib/source/helpers/: file.cpp  utils.cpp
lib/source/pl/: evaluator.cpp  lexer.cpp  log_console.cpp  parser.cpp  pattern_language.cpp  preprocessor.cpp  validator.cpp
lib/source/pl/core/: api.cpp  error.cpp  evaluator.cpp  lexer.cpp  lexer_sm.cpp  new_lexer.cpp  new_lexer_sm.cpp  parser.cpp  parser_manager.cpp  preprocessor.cpp  resolver.cpp  resolvers.cpp  sections.cpp  token.cpp  validator.cpp
lib/source/pl/core/ast/: ast_node.cpp  ast_node_array_variable_decl.cpp  ast_node_attribute.cpp  ast_node_bitfield.cpp  ast_node_bitfield_array_variable_decl.cpp  ast_node_bitfield_field.cpp  ast_node_builtin_type.cpp  ast_node_cast.cpp  ast_node_compound_statement.cpp  ast_node_conditional_statement.cpp  ast_node_control_flow_statement.cpp  ast_node_enum.cpp  ast_node_function_call.cpp  ast_node_function_definition.cpp  ast_node_import_statement.cpp  ast_node_imported_type.cpp  ast_node_literal.cpp  ast_node_lvalue_assignment.cpp  ast_node_match_statement.cpp  ast_node_mathematical_expression.cpp  ast_node_multi_variable_decl.cpp  ast_node_parameter_pack.cpp  ast_node_pointer_variable_decl.cpp  ast_node_rvalue.cpp  ast_node_rvalue_assignment.cpp  ast_node_scope_resolution.cpp  ast_node_struct.cpp  ast_node_ternary_expression.cpp  ast_node_try_catch_statement.cpp  ast_node_type_application.cpp  ast_node_type_decl.cpp  ast_node_type_operator.cpp  ast_node_union.cpp  ast_node_variable_decl.cpp  ast_node_while_statement.cpp  (+1 more)
lib/source/pl/helpers/: file.cpp  sort_checks.cpp  utils.cpp
lib/source/pl/libstd/: file.cpp  math.cpp  mem.cpp  std.cpp  string.cpp  time.cpp
main/: CMakeLists.txt
main/include/formatters/: formatter.hpp  formatter_json.hpp
main/source/: main.cpp
(+131 files in other folders)
